basic shit, my logic. bullshit logic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Password Generator</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <div >
+
+      <p id="gen_pass"></p>
+      <button type="submit" onClick="generatePass()">Generate</button>
+      <script src="index.js"></script>
+
+    </div>
   </body>
 </html>
