--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Password Generator</title>
   </head>
   <body>
-    <div >
+    <label>
+      <input type="text" placeholder=" " disabled />
+      <p id="gen_pass">Password</p>
+    </label>
+    <button onClick="generatePass()">🔑 Generate Password</button>
 
-      <p id="gen_pass"></p>
-      <button type="submit" onClick="generatePass()">Generate</button>
-      <script src="index.js"></script>
-
-    </div>
+    <script src="index.js"></script>
   </body>
 </html>
