--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <label>
       <input type="text" placeholder=" " disabled />
-      <p id="gen_pass">Password</p>
+      <p>Password</p>
     </label>
     <button onClick="generatePass()">🔑 Generate Password</button>
 
